--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <header>
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="../PANAKEIA PSD TO BOOTSTRAP/img/logo.png" alt="" class="img-fluid"></a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.png" alt="" class="img-fluid"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
